--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,40 @@ a:hover {
 	width: 100%;
 }
 
+button {
+	font-family: Circular;
+	font-size: 18px;
+	color: #C3C3C3;
+	background: rgba(0,0,0,0);
+	border: solid 2px #EDEDED;
+	border-radius: 8px;
+	display: block;
+	margin: 20px auto 50px auto;
+	padding: 10px 20px 10px 20px;
+	width: 198px;
+	opacity: 1;
+	transition: opacity .25s ease-in-out;
+    -moz-transition: opacity .25s ease-in-out;
+    -webkit-transition: opacity .25s ease-in-out;
+}
+
+button:hover {
+	opacity: 0.65;
+}
+
+.button a {
+	text-decoration: none;
+}
+
+.caption {
+	color: #aaa;
+	font-family: Circular;
+	font-size: 14px;
+	margin-top: -20px;
+	margin-bottom: 50px;
+	text-align: center;
+}
+
 #cta {
 	font-family: Circular;
 	font-size: 16px;
@@ -74,6 +108,7 @@ footer {
 	width: 230px;
 	margin: auto;
 	padding-bottom: 140px;
+	padding-left: 18px;
 }
 
 footer img {
@@ -82,13 +117,32 @@ footer img {
 }
 
 .full_background {
-	background-color: #F7F6F4;
 	background-size: cover;
 	display: inline-block;
 	height: auto;
 	width: 100%;
 	margin: 30px auto 30px auto;
 
+}
+
+.full_background.rdio_blue {
+	background-color: #2593CE;
+}
+
+.full_background.rdio_blue p {
+	color: #fff;
+}
+
+.full_background.rdio_blue h5 {
+	color: #fff;
+}
+
+.full_background.rdio_light {
+	background-color: #F2F2F2;
+}
+
+.full_background.wistia {
+	background-color: #F7F6F4;
 }
 
 h3, h4, h5, nav {
@@ -191,6 +245,10 @@ h9 {
 	margin: 30px auto 30px auto;
 }
 
+.img_padding_small {
+	margin: 15px auto 30px auto;
+}
+
 li {
 	color: #C3C3C3;
 	float: left;
@@ -198,7 +256,10 @@ li {
 	font-size: 13px;
 	letter-spacing: 1px;
 	margin-right: 52px;
+}
 
+.other li {
+	margin-right: 48px;
 }
 
 nav {
@@ -231,6 +292,7 @@ nav a:hover {
 	display: inline-block;
 	margin-top: 5px;
 	width: 20px;
+	opacity: 1;
 }
 
 #other {
@@ -258,6 +320,18 @@ p {
 
 }
 
+.scrollToTop {
+	width:40px; 
+	height:5px;
+	padding:10px; 
+	position:fixed;
+	bottom:50px;
+	right:30px;
+	display:none;
+	background: url('../images/scroll_icon.png') no-repeat;
+	background-size: 50%;
+}
+
 .separator {
 	height: 2px;
 	background-color: #EDEDED;
@@ -277,6 +351,26 @@ p {
 
 .spacer {
 	height: 100px;
+}
+
+.spacer_bottom {
+	padding-bottom: 15px;
+}
+
+.spacer_small {
+	height: 50px;
+}
+
+.spacer_top {
+	padding-top: 15px;
+}
+
+.splash_other {
+	width: 100%;
+	background-color: #EE9A7F;
+	background-size: cover;
+	margin-top: 0px;
+	overflow: hidden;
 }
 
 .splash_rdio {
@@ -363,7 +457,7 @@ ul a:active {
 
 .wistia nav a:hover {
 	color: #fff;
-	opacity: 0.5;
+	opacity: 0.65;
 	border-width: 0 0 0px;
 	border-style: none;
 	box-shadow: inset 0 0 0;
@@ -401,6 +495,15 @@ background: #999;
 	.readmore img {
 		float: left;
 		width: 100%;
+	}
+
+	.scrollToTop {
+		bottom:25px;
+		right:5px;
+	}
+
+	.spacer {
+		height: 0px;
 	}
 
 	.subtitle {
